[package]
name = "kafmap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = "1.0.41"
clap = { version = "3.0.0-beta.2" }
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_16"] }
kube = "0.57.0"
kube-runtime = "0.57.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
svg = { version = "0.8.0", optional = true }
tokio = { version = "1.7.1", features = ["rt", "macros"] }
xml-rs = "0.8.3"
